fixed form spacing on signup form, sessions_controller refactored root

--- a/public/stylesheets/banners/loggedout.css
+++ b/public/stylesheets/banners/loggedout.css
@@ -102,7 +102,7 @@ input:hover{
 
 label{
     display: block;
-    margin-top: 3%;
+    margin-top: 2%;
 }
 
 #ls-submit{
